Examen_Ejercicio02/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias '}'

   2  definiciones : definiciones definicion
   3               |

   4  definicion : tipoSimple ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'
   5             | VOID ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'
   6             | declaracionVariable ';'

   7  declaraciones : declaraciones declaracionVariable ';'
   8                |

   9  parametros : parametros ',' definicionVariable
  10             | definicionVariable
  11             |

  12  definicionVariable : tipoSimple ID

  13  cuerpoDefinicion : sentencias
  14                   |

  15  sentencias : sentencias sentencia
  16             | sentencia

  17  sentencia : expresion '=' expresion ';'
  18            | WHILE '(' expresion ')' cuerpoCondicional
  19            | IF '(' expresion ')' cuerpoCondicional
  20            | IF '(' expresion ')' cuerpoCondicional ELSE cuerpoCondicional
  21            | WRITE expresiones ';'
  22            | READ expresiones ';'
  23            | invocacion ';'
  24            | RETURN expresion ';'

  25  cuerpoCondicional : '{' sentencias '}'
  26                    | sentencia

  27  declaracionVariable : tipoSimple identificador
  28                      | tipoSimple indices identificador
  29                      | STRUCT '{' campos '}' identificador
  30                      | STRUCT '{' campos '}' indices identificador

  31  campos : campos declaracionVariable ';'
  32         | declaracionVariable ';'

  33  expresiones : expresiones ',' expresion
  34              | expresion

  35  expresion : ID
  36            | CTE_ENTERA
  37            | CTE_REAL
  38            | CTE_CARACTER
  39            | expresionAritmetica
  40            | expresionComparacion
  41            | expresionLogica
  42            | '-' expresion
  43            | expresion '.' ID
  44            | '(' expresion ')'
  45            | '(' tipoSimple ')' expresion
  46            | invocacion
  47            | expresion '[' expresion ']'

  48  expresionAritmetica : expresion '+' expresion
  49                      | expresion '*' expresion
  50                      | expresion '/' expresion
  51                      | expresion '-' expresion
  52                      | expresion '%' expresion

  53  expresionComparacion : expresion '>' expresion
  54                       | expresion '<' expresion
  55                       | expresion MAYORIGUALQUE expresion
  56                       | expresion MENORIGUALQUE expresion
  57                       | expresion DISTINTO expresion
  58                       | expresion IGUALDAD expresion

  59  expresionLogica : expresion Y expresion
  60                  | expresion O expresion
  61                  | '!' expresion

  62  invocacion : ID '(' argumentosLlamada ')'

  63  argumentosLlamada : expresionesExamen
  64                    |

  65  expresionesExamen : expresionExamen ',' expresionesExamen
  66                    | expresionExamen

  67  expresionExamen : ID ':' constante

  68  constante : CTE_ENTERA
  69            | CTE_REAL
  70            | CTE_CARACTER

  71  indices : '[' CTE_ENTERA ']' indices
  72          | '[' CTE_ENTERA ']'

  73  identificador : identificador ',' ID
  74                | ID

  75  tipoSimple : INT
  76             | DOUBLE
  77             | CHAR

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . VOID MAIN '(' ')' '{' declaraciones sentencias '}'  (1)
	definiciones : definiciones . definicion  (2)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	VOID  shift 7
	.  error

	definicion  goto 8
	tipoSimple  goto 9
	declaracionVariable  goto 10


state 3
	tipoSimple : INT .  (75)

	.  reduce 75


state 4
	tipoSimple : DOUBLE .  (76)

	.  reduce 76


state 5
	tipoSimple : CHAR .  (77)

	.  reduce 77


state 6
	declaracionVariable : STRUCT . '{' campos '}' identificador  (29)
	declaracionVariable : STRUCT . '{' campos '}' indices identificador  (30)

	'{'  shift 11
	.  error


state 7
	programa : definiciones VOID . MAIN '(' ')' '{' declaraciones sentencias '}'  (1)
	definicion : VOID . ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)

	MAIN  shift 12
	ID  shift 13
	.  error


state 8
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 9
	definicion : tipoSimple . ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	declaracionVariable : tipoSimple . identificador  (27)
	declaracionVariable : tipoSimple . indices identificador  (28)

	ID  shift 14
	'['  shift 15
	.  error

	identificador  goto 16
	indices  goto 17


state 10
	definicion : declaracionVariable . ';'  (6)

	';'  shift 18
	.  error


state 11
	declaracionVariable : STRUCT '{' . campos '}' identificador  (29)
	declaracionVariable : STRUCT '{' . campos '}' indices identificador  (30)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 20
	campos  goto 21


state 12
	programa : definiciones VOID MAIN . '(' ')' '{' declaraciones sentencias '}'  (1)

	'('  shift 22
	.  error


state 13
	definicion : VOID ID . '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)

	'('  shift 23
	.  error


state 14
	definicion : tipoSimple ID . '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	identificador : ID .  (74)

	'('  shift 24
	';'  reduce 74
	','  reduce 74


state 15
	indices : '[' . CTE_ENTERA ']' indices  (71)
	indices : '[' . CTE_ENTERA ']'  (72)

	CTE_ENTERA  shift 25
	.  error


state 16
	declaracionVariable : tipoSimple identificador .  (27)
	identificador : identificador . ',' ID  (73)

	','  shift 26
	';'  reduce 27


state 17
	declaracionVariable : tipoSimple indices . identificador  (28)

	ID  shift 27
	.  error

	identificador  goto 28


state 18
	definicion : declaracionVariable ';' .  (6)

	.  reduce 6


state 19
	declaracionVariable : tipoSimple . identificador  (27)
	declaracionVariable : tipoSimple . indices identificador  (28)

	ID  shift 27
	'['  shift 15
	.  error

	identificador  goto 16
	indices  goto 17


state 20
	campos : declaracionVariable . ';'  (32)

	';'  shift 29
	.  error


state 21
	declaracionVariable : STRUCT '{' campos . '}' identificador  (29)
	declaracionVariable : STRUCT '{' campos . '}' indices identificador  (30)
	campos : campos . declaracionVariable ';'  (31)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	'}'  shift 30
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 31


state 22
	programa : definiciones VOID MAIN '(' . ')' '{' declaraciones sentencias '}'  (1)

	')'  shift 32
	.  error


state 23
	definicion : VOID ID '(' . parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)
	parametros : .  (11)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 11
	','  reduce 11

	tipoSimple  goto 33
	parametros  goto 34
	definicionVariable  goto 35


state 24
	definicion : tipoSimple ID '(' . parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	parametros : .  (11)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 11
	','  reduce 11

	tipoSimple  goto 33
	parametros  goto 36
	definicionVariable  goto 35


state 25
	indices : '[' CTE_ENTERA . ']' indices  (71)
	indices : '[' CTE_ENTERA . ']'  (72)

	']'  shift 37
	.  error


state 26
	identificador : identificador ',' . ID  (73)

	ID  shift 38
	.  error


state 27
	identificador : ID .  (74)

	.  reduce 74


state 28
	declaracionVariable : tipoSimple indices identificador .  (28)
	identificador : identificador . ',' ID  (73)

	','  shift 26
	';'  reduce 28


state 29
	campos : declaracionVariable ';' .  (32)

	.  reduce 32


state 30
	declaracionVariable : STRUCT '{' campos '}' . identificador  (29)
	declaracionVariable : STRUCT '{' campos '}' . indices identificador  (30)

	ID  shift 27
	'['  shift 15
	.  error

	identificador  goto 39
	indices  goto 40


state 31
	campos : campos declaracionVariable . ';'  (31)

	';'  shift 41
	.  error


state 32
	programa : definiciones VOID MAIN '(' ')' . '{' declaraciones sentencias '}'  (1)

	'{'  shift 42
	.  error


state 33
	definicionVariable : tipoSimple . ID  (12)

	ID  shift 43
	.  error


state 34
	definicion : VOID ID '(' parametros . ')' '{' declaraciones cuerpoDefinicion '}'  (5)
	parametros : parametros . ',' definicionVariable  (9)

	')'  shift 44
	','  shift 45
	.  error


state 35
	parametros : definicionVariable .  (10)

	.  reduce 10


state 36
	definicion : tipoSimple ID '(' parametros . ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	parametros : parametros . ',' definicionVariable  (9)

	')'  shift 46
	','  shift 45
	.  error


state 37
	indices : '[' CTE_ENTERA ']' . indices  (71)
	indices : '[' CTE_ENTERA ']' .  (72)

	'['  shift 15
	ID  reduce 72

	indices  goto 47


state 38
	identificador : identificador ',' ID .  (73)

	.  reduce 73


state 39
	declaracionVariable : STRUCT '{' campos '}' identificador .  (29)
	identificador : identificador . ',' ID  (73)

	','  shift 26
	';'  reduce 29


state 40
	declaracionVariable : STRUCT '{' campos '}' indices . identificador  (30)

	ID  shift 27
	.  error

	identificador  goto 48


state 41
	campos : campos declaracionVariable ';' .  (31)

	.  reduce 31


state 42
	programa : definiciones VOID MAIN '(' ')' '{' . declaraciones sentencias '}'  (1)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 49


state 43
	definicionVariable : tipoSimple ID .  (12)

	.  reduce 12


state 44
	definicion : VOID ID '(' parametros ')' . '{' declaraciones cuerpoDefinicion '}'  (5)

	'{'  shift 50
	.  error


state 45
	parametros : parametros ',' . definicionVariable  (9)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	.  error

	tipoSimple  goto 33
	definicionVariable  goto 51


state 46
	definicion : tipoSimple ID '(' parametros ')' . '{' declaraciones cuerpoDefinicion '}'  (4)

	'{'  shift 52
	.  error


state 47
	indices : '[' CTE_ENTERA ']' indices .  (71)

	.  reduce 71


state 48
	declaracionVariable : STRUCT '{' campos '}' indices identificador .  (30)
	identificador : identificador . ',' ID  (73)

	','  shift 26
	';'  reduce 30


state 49
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones . sentencias '}'  (1)
	declaraciones : declaraciones . declaracionVariable ';'  (7)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	sentencias  goto 65
	tipoSimple  goto 19
	declaracionVariable  goto 66
	sentencia  goto 67
	expresion  goto 68
	invocacion  goto 69
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 50
	definicion : VOID ID '(' parametros ')' '{' . declaraciones cuerpoDefinicion '}'  (5)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 73


state 51
	parametros : parametros ',' definicionVariable .  (9)

	.  reduce 9


state 52
	definicion : tipoSimple ID '(' parametros ')' '{' . declaraciones cuerpoDefinicion '}'  (4)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 74


state 53
	expresion : CTE_ENTERA .  (36)

	.  reduce 36


state 54
	expresion : CTE_REAL .  (37)

	.  reduce 37


state 55
	expresion : CTE_CARACTER .  (38)

	.  reduce 38


state 56
	sentencia : READ . expresiones ';'  (22)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 75
	expresiones  goto 76
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 57
	sentencia : WRITE . expresiones ';'  (21)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 75
	expresiones  goto 78
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 58
	sentencia : WHILE . '(' expresion ')' cuerpoCondicional  (18)

	'('  shift 79
	.  error


state 59
	sentencia : IF . '(' expresion ')' cuerpoCondicional  (19)
	sentencia : IF . '(' expresion ')' cuerpoCondicional ELSE cuerpoCondicional  (20)

	'('  shift 80
	.  error


state 60
	sentencia : RETURN . expresion ';'  (24)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 81
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 61
	expresion : ID .  (35)
	invocacion : ID . '(' argumentosLlamada ')'  (62)

	'('  shift 82
	Y  reduce 35
	O  reduce 35
	MAYORIGUALQUE  reduce 35
	MENORIGUALQUE  reduce 35
	DISTINTO  reduce 35
	IGUALDAD  reduce 35
	'='  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	'%'  reduce 35
	'['  reduce 35
	']'  reduce 35
	'.'  reduce 35
	')'  reduce 35
	';'  reduce 35
	','  reduce 35


state 62
	expresion : '-' . expresion  (42)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 83
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 63
	expresion : '(' . expresion ')'  (44)
	expresion : '(' . tipoSimple ')' expresion  (45)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	tipoSimple  goto 84
	expresion  goto 85
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 64
	expresionLogica : '!' . expresion  (61)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 86
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 65
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias . '}'  (1)
	sentencias : sentencias . sentencia  (15)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'}'  shift 87
	'!'  shift 64
	.  error

	sentencia  goto 88
	expresion  goto 68
	invocacion  goto 69
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 66
	declaraciones : declaraciones declaracionVariable . ';'  (7)

	';'  shift 89
	.  error


state 67
	sentencias : sentencia .  (16)

	.  reduce 16


state 68
	sentencia : expresion . '=' expresion ';'  (17)
	expresion : expresion . '.' ID  (43)
	expresion : expresion . '[' expresion ']'  (47)
	expresionAritmetica : expresion . '+' expresion  (48)
	expresionAritmetica : expresion . '*' expresion  (49)
	expresionAritmetica : expresion . '/' expresion  (50)
	expresionAritmetica : expresion . '-' expresion  (51)
	expresionAritmetica : expresion . '%' expresion  (52)
	expresionComparacion : expresion . '>' expresion  (53)
	expresionComparacion : expresion . '<' expresion  (54)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (55)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (56)
	expresionComparacion : expresion . DISTINTO expresion  (57)
	expresionComparacion : expresion . IGUALDAD expresion  (58)
	expresionLogica : expresion . Y expresion  (59)
	expresionLogica : expresion . O expresion  (60)

	Y  shift 90
	O  shift 91
	MAYORIGUALQUE  shift 92
	MENORIGUALQUE  shift 93
	DISTINTO  shift 94
	IGUALDAD  shift 95
	'='  shift 96
	'>'  shift 97
	'<'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'%'  shift 103
	'['  shift 104
	'.'  shift 105
	.  error


state 69
	sentencia : invocacion . ';'  (23)
	expresion : invocacion .  (46)

	';'  shift 106
	Y  reduce 46
	O  reduce 46
	MAYORIGUALQUE  reduce 46
	MENORIGUALQUE  reduce 46
	DISTINTO  reduce 46
	IGUALDAD  reduce 46
	'='  reduce 46
	'>'  reduce 46
	'<'  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	'%'  reduce 46
	'['  reduce 46
	'.'  reduce 46


state 70
	expresion : expresionAritmetica .  (39)

	.  reduce 39


state 71
	expresion : expresionComparacion .  (40)

	.  reduce 40


state 72
	expresion : expresionLogica .  (41)

	.  reduce 41


state 73
	definicion : VOID ID '(' parametros ')' '{' declaraciones . cuerpoDefinicion '}'  (5)
	declaraciones : declaraciones . declaracionVariable ';'  (7)
	cuerpoDefinicion : .  (14)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	'}'  reduce 14

	sentencias  goto 107
	tipoSimple  goto 19
	cuerpoDefinicion  goto 108
	declaracionVariable  goto 66
	sentencia  goto 67
	expresion  goto 68
	invocacion  goto 69
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 74
	definicion : tipoSimple ID '(' parametros ')' '{' declaraciones . cuerpoDefinicion '}'  (4)
	declaraciones : declaraciones . declaracionVariable ';'  (7)
	cuerpoDefinicion : .  (14)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 60
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	'}'  reduce 14

	sentencias  goto 107
	tipoSimple  goto 19
	cuerpoDefinicion  goto 109
	declaracionVariable  goto 66
	sentencia  goto 67
	expresion  goto 68
	invocacion  goto 69
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 75
	expresiones : expresion .  (34)
	expresion : expresion . '.' ID  (43)
	expresion : expresion . '[' expresion ']'  (47)
	expresionAritmetica : expresion . '+' expresion  (48)
	expresionAritmetica : expresion . '*' expresion  (49)
	expresionAritmetica : expresion . '/' expresion  (50)
	expresionAritmetica : expresion . '-' expresion  (51)
	expresionAritmetica : expresion . '%' expresion  (52)
	expresionComparacion : expresion . '>' expresion  (53)
	expresionComparacion : expresion . '<' expresion  (54)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (55)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (56)
	expresionComparacion : expresion . DISTINTO expresion  (57)
	expresionComparacion : expresion . IGUALDAD expresion  (58)
	expresionLogica : expresion . Y expresion  (59)
	expresionLogica : expresion . O expresion  (60)

	Y  shift 90
	O  shift 91
	MAYORIGUALQUE  shift 92
	MENORIGUALQUE  shift 93
	DISTINTO  shift 94
	IGUALDAD  shift 95
	'>'  shift 97
	'<'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'%'  shift 103
	'['  shift 104
	'.'  shift 105
	';'  reduce 34
	','  reduce 34


state 76
	sentencia : READ expresiones . ';'  (22)
	expresiones : expresiones . ',' expresion  (33)

	';'  shift 110
	','  shift 111
	.  error


state 77
	expresion : invocacion .  (46)

	.  reduce 46


state 78
	sentencia : WRITE expresiones . ';'  (21)
	expresiones : expresiones . ',' expresion  (33)

	';'  shift 112
	','  shift 111
	.  error


state 79
	sentencia : WHILE '(' . expresion ')' cuerpoCondicional  (18)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 113
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 80
	sentencia : IF '(' . expresion ')' cuerpoCondicional  (19)
	sentencia : IF '(' . expresion ')' cuerpoCondicional ELSE cuerpoCondicional  (20)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 114
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 81
	sentencia : RETURN expresion . ';'  (24)
	expresion : expresion . '.' ID  (43)
	expresion : expresion . '[' expresion ']'  (47)
	expresionAritmetica : expresion . '+' expresion  (48)
	expresionAritmetica : expresion . '*' expresion  (49)
	expresionAritmetica : expresion . '/' expresion  (50)
	expresionAritmetica : expresion . '-' expresion  (51)
	expresionAritmetica : expresion . '%' expresion  (52)
	expresionComparacion : expresion . '>' expresion  (53)
	expresionComparacion : expresion . '<' expresion  (54)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (55)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (56)
	expresionComparacion : expresion . DISTINTO expresion  (57)
	expresionComparacion : expresion . IGUALDAD expresion  (58)
	expresionLogica : expresion . Y expresion  (59)
	expresionLogica : expresion . O expresion  (60)

	Y  shift 90
	O  shift 91
	MAYORIGUALQUE  shift 92
	MENORIGUALQUE  shift 93
	DISTINTO  shift 94
	IGUALDAD  shift 95
	'>'  shift 97
	'<'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'%'  shift 103
	'['  shift 104
	'.'  shift 105
	';'  shift 115
	.  error


state 82
	invocacion : ID '(' . argumentosLlamada ')'  (62)
	argumentosLlamada : .  (64)

	ID  shift 116
	')'  reduce 64

	argumentosLlamada  goto 117
	expresionesExamen  goto 118
	expresionExamen  goto 119


state 83
	expresion : '-' expresion .  (42)
	expresion : expresion . '.' ID  (43)
	expresion : expresion . '[' expresion ']'  (47)
	expresionAritmetica : expresion . '+' expresion  (48)
	expresionAritmetica : expresion . '*' expresion  (49)
	expresionAritmetica : expresion . '/' expresion  (50)
	expresionAritmetica : expresion . '-' expresion  (51)
	expresionAritmetica : expresion . '%' expresion  (52)
	expresionComparacion : expresion . '>' expresion  (53)
	expresionComparacion : expresion . '<' expresion  (54)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (55)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (56)
	expresionComparacion : expresion . DISTINTO expresion  (57)
	expresionComparacion : expresion . IGUALDAD expresion  (58)
	expresionLogica : expresion . Y expresion  (59)
	expresionLogica : expresion . O expresion  (60)

	'['  shift 104
	'.'  shift 105
	Y  reduce 42
	O  reduce 42
	MAYORIGUALQUE  reduce 42
	MENORIGUALQUE  reduce 42
	DISTINTO  reduce 42
	IGUALDAD  reduce 42
	'='  reduce 42
	'>'  reduce 42
	'<'  reduce 42
	'+'  reduce 42
	'-'  reduce 42
	'*'  reduce 42
	'/'  reduce 42
	'%'  reduce 42
	']'  reduce 42
	')'  reduce 42
	';'  reduce 42
	','  reduce 42


state 84
	expresion : '(' tipoSimple . ')' expresion  (45)

	')'  shift 120
	.  error


state 85
	expresion : expresion . '.' ID  (43)
	expresion : '(' expresion . ')'  (44)
	expresion : expresion . '[' expresion ']'  (47)
	expresionAritmetica : expresion . '+' expresion  (48)
	expresionAritmetica : expresion . '*' expresion  (49)
	expresionAritmetica : expresion . '/' expresion  (50)
	expresionAritmetica : expresion . '-' expresion  (51)
	expresionAritmetica : expresion . '%' expresion  (52)
	expresionComparacion : expresion . '>' expresion  (53)
	expresionComparacion : expresion . '<' expresion  (54)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (55)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (56)
	expresionComparacion : expresion . DISTINTO expresion  (57)
	expresionComparacion : expresion . IGUALDAD expresion  (58)
	expresionLogica : expresion . Y expresion  (59)
	expresionLogica : expresion . O expresion  (60)

	Y  shift 90
	O  shift 91
	MAYORIGUALQUE  shift 92
	MENORIGUALQUE  shift 93
	DISTINTO  shift 94
	IGUALDAD  shift 95
	'>'  shift 97
	'<'  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'%'  shift 103
	'['  shift 104
	'.'  shift 105
	')'  shift 121
	.  error


state 86
	expresion : expresion . '.' ID  (43)
	expresion : expresion . '[' expresion ']'  (47)
	expresionAritmetica : expresion . '+' expresion  (48)
	expresionAritmetica : expresion . '*' expresion  (49)
	expresionAritmetica : expresion . '/' expresion  (50)
	expresionAritmetica : expresion . '-' expresion  (51)
	expresionAritmetica : expresion . '%' expresion  (52)
	expresionComparacion : expresion . '>' expresion  (53)
	expresionComparacion : expresion . '<' expresion  (54)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (55)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (56)
	expresionComparacion : expresion . DISTINTO expresion  (57)
	expresionComparacion : expresion . IGUALDAD expresion  (58)
	expresionLogica : expresion . Y expresion  (59)
	expresionLogica : expresion . O expresion  (60)
	expresionLogica : '!' expresion .  (61)

	'['  shift 104
	'.'  shift 105
	Y  reduce 61
	O  reduce 61
	MAYORIGUALQUE  reduce 61
	MENORIGUALQUE  reduce 61
	DISTINTO  reduce 61
	IGUALDAD  reduce 61
	'='  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	'%'  reduce 61
	']'  reduce 61
	')'  reduce 61
	';'  reduce 61
	','  reduce 61


state 87
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias '}' .  (1)

	.  reduce 1


state 88
	sentencias : sentencias sentencia .  (15)

	.  reduce 15


state 89
	declaraciones : declaraciones declaracionVariable ';' .  (7)

	.  reduce 7


state 90
	expresionLogica : expresion Y . expresion  (59)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 122
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 91
	expresionLogica : expresion O . expresion  (60)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 123
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 92
	expresionComparacion : expresion MAYORIGUALQUE . expresion  (55)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 124
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 93
	expresionComparacion : expresion MENORIGUALQUE . expresion  (56)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 125
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 94
	expresionComparacion : expresion DISTINTO . expresion  (57)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 126
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 95
	expresionComparacion : expresion IGUALDAD . expresion  (58)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 127
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 96
	sentencia : expresion '=' . expresion ';'  (17)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 128
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 97
	expresionComparacion : expresion '>' . expresion  (53)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error

	expresion  goto 129
	invocacion  goto 77
	expresionAritmetica  goto 70
	expresionComparacion  goto 71
	expresionLogica  goto 72


state 98
	expresionComparacion : expresion '<' . expresion  (54)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 61
	'-'  shift 62
	'('  shift 63
	'!'  shift 64
	.  error
